-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 7
-
Component/s: core-libs
-
b33
-
generic
-
windows_xp
-
Not verified
Compiler warnings in networking code: (see logs at /java/re/jdk/7/promotes/latest/logs/build*.log)
../../../src/windows/native/java/net/Inet4AddressImpl.c(144) : warning C4101: 'byteArrayCls' : unreferenced local variable
../../../src/windows/native/java/net/Inet4AddressImpl.c(318) : warning C4013: 'getpid' undefined; assuming extern returning int
../../../src/windows/native/java/net/Inet4AddressImpl.c(494) : warning C4013: 'NET_Socket' undefined; assuming extern returning int
../../../src/windows/native/java/net/Inet4AddressImpl.c(549) : warning C4013: 'NET_ThrowByNameWithLastError' undefined; assuming extern returning int
Inet6AddressImpl.c
../../../src/windows/native/java/net/Inet6AddressImpl.c(118) : warning C4013: 'NET_addrtransAvailable' undefined; assuming extern returning int
../../../src/windows/native/java/net/Inet6AddressImpl.c(310) : warning C4101: 'fid' : unreferenced local variable
../../../src/windows/native/java/net/Inet6AddressImpl.c(313) : warning C4101: 'him' : unreferenced local variable
../../../src/windows/native/java/net/Inet6AddressImpl.c(312) : warning C4101: 'family' : unreferenced local variable
../../../src/windows/native/java/net/Inet6AddressImpl.c(395) : warning C4013: 'getpid' undefined; assuming extern returning int
../../../src/windows/native/java/net/Inet6AddressImpl.c(377) : warning C4101: 'hlen1' : unreferenced local variable
../../../src/windows/native/java/net/Inet6AddressImpl.c(377) : warning C4101: 'icmplen' : unreferenced local variable
.... too many to list
../../../src/windows/native/java/net/Inet4AddressImpl.c(144) : warning C4101: 'byteArrayCls' : unreferenced local variable
../../../src/windows/native/java/net/Inet4AddressImpl.c(318) : warning C4013: 'getpid' undefined; assuming extern returning int
../../../src/windows/native/java/net/Inet4AddressImpl.c(494) : warning C4013: 'NET_Socket' undefined; assuming extern returning int
../../../src/windows/native/java/net/Inet4AddressImpl.c(549) : warning C4013: 'NET_ThrowByNameWithLastError' undefined; assuming extern returning int
Inet6AddressImpl.c
../../../src/windows/native/java/net/Inet6AddressImpl.c(118) : warning C4013: 'NET_addrtransAvailable' undefined; assuming extern returning int
../../../src/windows/native/java/net/Inet6AddressImpl.c(310) : warning C4101: 'fid' : unreferenced local variable
../../../src/windows/native/java/net/Inet6AddressImpl.c(313) : warning C4101: 'him' : unreferenced local variable
../../../src/windows/native/java/net/Inet6AddressImpl.c(312) : warning C4101: 'family' : unreferenced local variable
../../../src/windows/native/java/net/Inet6AddressImpl.c(395) : warning C4013: 'getpid' undefined; assuming extern returning int
../../../src/windows/native/java/net/Inet6AddressImpl.c(377) : warning C4101: 'hlen1' : unreferenced local variable
../../../src/windows/native/java/net/Inet6AddressImpl.c(377) : warning C4101: 'icmplen' : unreferenced local variable
.... too many to list
- relates to
-
JDK-6730740 Fix for 6729881 has apparently broken several 64 bit tests: "Bad address"
-
- Resolved
-