6729881: Compiler warning in networking native code

Cleanup compiler warnings

Reviewed-by: alanb, jccollet, michaelm